src/shared/adjusters/css/adjusters.css
/* ... */
.gpii-prefsEditor-preferenceGroup {
    background:#e7f1ef;
    width: 340px;
    //min-height: 100px;
}

.gpii-prefsEditor-category {
    width: 80%;
    margin: 0 auto;
    font-family: 'Open Sans', sans-serif;
}

.gpii-prefsEditor label::first-letter,
.gpii-prefsEditor h1::first-letter,
.gpii-prefsEditor h2::first-letter,
.gpii-prefsEditor h3::first-letter,
.gpii-prefsEditor h4::first-letter,
.gpii-prefsEditor h5::first-letter {
    text-transform: capitalize;
}

.gpii-prefsEditor label {
    text-transform: none !important;
}

.gpii-uiOptions .headerTitle::first-letter {
    text-transform: lowercase;
}

h2 {
    margin-bottom: 5px;
}

h2 > label {
    width: 240px !important;
    word-wrap: break-word;    
}

/*
    Header's styling
*/
.gpii-prefsEditor-headerImage {
    -webkit-font-smoothing: antialiased;
    width: 330;
    margin:5px !important;
    color: white;
    background-color: #566374;    
    position: absolute;
}

.gpii-prefsEditor-headerImage:before {
    font-size: 90px !important;
}

.gpii-prefsEditor-headerImageTick {
    font-size: 20px !important;
    margin-left: 300px;
    margin-top: -30px;
    background-color: white;
    border-radius: 50%;
    padding: 2px;
    color: #566374;
}

.gpii-prefsEditor-headerImageTick:before {
    content: "\e00a" !important;
}

input[type=checkbox] + .gpii-prefsEditor-headerImage > .gpii-prefsEditor-headerImageTick{
    display: none;
}

input[type=checkbox]:checked + .gpii-prefsEditor-headerImage > .gpii-prefsEditor-headerImageTick{
    display: block;
}

.gpii-prefsEditor-increaseSizePanel > .gpii-prefsEditor-headerImage:before {
    content: "\e003";
}

.gpii-prefsEditor-contrastPanel > .gpii-prefsEditor-headerImage:before {
    content: "\e002";
}

.gpii-prefsEditor-headerTitle {
    font-family: 'Roboto Slab', serif;
    left: 0; 
    width: 100%;
    color: white;
    text-align: left;
    font-size: 1.8em !important;
    margin: -90px 0 0;
    display: inline;
    line-height: 90px;
    color: #FFFFFF;
    float: left;
    min-height: 90px;
    width: 240px;
    word-wrap: break-word;
    padding-left: 90px;
}

.gpii-prefsEditor-headerClickableLabel {
    cursor: pointer;
    color: transparent !important;
    margin: 5px !important;
    position: relative !important;
}

input[type=checkbox], input[type=radio] {
    position: absolute;
    display: none;
    clip: rect(0 0 0 0);
    height:1px;
    width:1px;
    margin:-1px;
    padding:0;
    border:0;
}

/*
    The adjusters' font icons
*/
.gpii-prefsEditor-adjusterIcons {
    float: left;
    font-family: 'icons-no-frames-aug-29';
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
}

.gpii-prefsEditor-adjusterIconsAdditional > .gpii-increaseSize-magnifierPositionIconMain {
    font-family: 'font-icons-sept-3';
    margin-top: 0em;
}

/*
    The cursor size font icons
*/
.gpii-increaseSize-iconSmallCursor:before {
    font-size: 0.8em !important;
    content: "\e000";
}
.gpii-increaseSize-iconBigCursor:before {
    font-size: 1.9em !important;
    content: "\e000";
}
.gpii-increaseSize-iconSmallCursor {
    width: 1em;
    text-align: right;
    padding-top: 0.25em;
}
.gpii-increaseSize-iconBigCursor {
    width: 1em;
    margin-top: -0.5em !important;
}

/*
    The slider's style
*/
.gpii-prefsEditor .gpii-prefsEditor-slider-horz {
    width: calc(100% - 3em);
    margin: 2px !important;
    margin-bottom: 0.7em !important;
}

.gpii-prefsEditor .gpii-prefsEditor-slider a {
    //background: radial-gradient(circle 14.5px at 14.5px 50%, #566374 6px, white 8px);
    border: 1px solid #566374;
    box-shadow: none;
    width: 2.2em !important;
}

.gpii-prefsEditor .ui-slider-range {
    background-color: #17a9b8;
}

/*
    The textfieldStepper style
*/
.gpii-stepper {
    width: 100% !important;
    background-color: #FFFFFF;
    display: table;
}

.gpii-stepper-buttons {
    width: 10% !important;
    font-size: 1.5em !important;
    cursor: pointer;
    text-align: center !important;
    background-color: white;
    margin-left: 2px !important;
    margin-right: 2px !important;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    user-select: none;
    padding-top: 0.05em;
    float: left;
}

.gpii-stepper-valueField {
    width: 66% !important;
    border: none !important;
    text-align: center !important;
    font-size: 1.5em !important;
    margin-top: 1px !important;
    margin-bottom: 2px !important;
    float: left;
}

.gpii-stepper-unit {
    float: left;
    width: 10% !important;
    text-align: center !important;
    font-size: 1.5em !important;
}

/*
    Style for sliding to work
*/
.gpii-increaseSizePreferenceGroup {
    padding-top: 100px;
}

.gpii-prefsEditor-category {
    overflow: hidden;
}

.gpii-prefsEditor-category-hidden {
    overflow: hidden;
}

/*
    Style for more/less
*/
.gpii-prefsEditor-moreLess{
	display: block;
    width:100% !important;
    text-align: center;
    cursor: pointer;
    padding-bottom: 5px !important;
    padding-top: 20px;
}

/*
    Style for magnifier position font icons
*/
.gpii-increaseSize-magnifierPositionIconLabel {
    height: 4.7em !important;
    width: 6.3em !important;
    border: none !important;
    padding: 0 !important;
    cursor: pointer;
    background-color: white;
    margin-bottom: 0.5em !important;
    margin-right: 0.5em !important;
    font-size: 1em !important;
}

.gpii-increaseSize-magnifierPositionIcon {
    height: 0 !important;
    width: 0 !important;
    color: #636c7c;
    margin-top: -2px;
}

.gpii-increaseSize-magnifierPositionIcon:before {
    font-size: 5em !important;
}

.gpii-increaseSize-magnifierPositionBackground {
    height: 4.9em !important;
    width: 6.3em !important;
    padding-top: 2px;
}
/* ... */

